[package]
name = "oop"
version = "0.1.0"
authors = ["ultram4rine"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rusqlite = "0.24.1"
serde = "1.0.117"
serde_derive = "1.0.117"
serde-xml-rs = "0.4.0"